deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-gitlab
  template:
    metadata:
      labels:
        app: app-gitlab
    spec:
      containers:
        - name: gitlab-container
          image: gitlab/gitlab-ce:nightly
          volumeMounts:
            - mountPath: /var/opt/gitlab
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-gitlab
